@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.estuary.MaxEd" version="3.2.2" name="Estuary MaxEDITion" provider-name="darkozma, phil65, Ichabod Fletchman">
+<addon id="skin.estuary.MaxEd" version="3.2.3" name="Estuary MaxEDITion" provider-name="darkozma, phil65, Ichabod Fletchman">
 	<requires>
 		<import addon="xbmc.gui" version="5.14.0"/>
                 <import addon="resource.images.skinbackgrounds.clearMod" version="1.1.9"/>
@@ -49,7 +49,8 @@
 			<screenshot>resources/screenshot-09.png</screenshot>
 		</assets>
 		<news>[COLOR blue][B]Skin Estuary uMod2[/B][/COLOR]
-[COLOR green][B]•3.2.2[/B] Update item Menu.[/COLOR]
+[COLOR green][B]•3.2.3[/B] Update item Menu.[/COLOR]
+[COLOR yellow][B]•3.2.2[/B] Update item Menu.[/COLOR]
 [COLOR yellow][B]•3.2.1[/B] Update item Menu.[/COLOR]
 [COLOR yellow][B]•3.2.0[/B] Update item Menu.[/COLOR]
 [COLOR yellow][B]•3.1.8[/B] Update Menu.[/COLOR]
