@@ -987,7 +987,7 @@
 						</item>
 						<item>
 							<label>$LOCALIZE[342]</label>
-							<onclick>ActivateWindow(10025,"plugin://plugin.video.balandro/?ewogICAgImFjdGlvbiI6ICJsaXN0X2FsbCIsIAogICAgImNhdGVnb3J5IjogIkN1ZXZhbmEyRXNwIiwgCiAgICAiY2hhbm5lbCI6ICJjdWV2YW5hMmVzcCIsIAogICAgImluZm9MYWJlbHMiOiB7fSwgCiAgICAicGxvdCI6ICJbQ2FzdGVsbGFub11bQ1JdW0NSXVBlbMOtY3VsYXMgZW4gZXNwYcOxb2wuIiwgCiAgICAic2VhcmNoX3R5cGUiOiAibW92aWUiLCAKICAgICJ0aHVtYm5haWwiOiAiL2hvbWUvZGFya296bWEvLmtvZGkvYWRkb25zL3BsdWdpbi52aWRlby5iYWxhbmRyby9yZXNvdXJjZXMvbWVkaWEvY2hhbm5lbHMvdGh1bWIvY3VldmFuYTJlc3AucG5nIiwgCiAgICAidGl0bGUiOiAiQ2F0w6Fsb2dvIiwgCiAgICAidXJsIjogImh0dHBzOi8vY3VldmFuYTJlc3Bhbm9sLmNvbS92ZXItcGVsaWN1bGEtb25saW5lLyIKfQ%3d%3d",return)</onclick>
+							<onclick>ActivateWindow(10025,"plugin://plugin.video.balandro/?ewogICAgImFjdGlvbiI6ICJsaXN0X2FsbCIsIAogICAgImNhdGVnb3J5IjogIkNpbmVDYWxpZGFkTG9sIiwgCiAgICAiY2hhbm5lbCI6ICJjaW5lY2FsaWRhZGxvbCIsIAogICAgImluZm9MYWJlbHMiOiB7fSwgCiAgICAicGxvdCI6ICJbUGVsw61jdWxhcywgU2VyaWVzLCBUb3JyZW50c11bQ1JdW0Nhc3RlbGxhbm8sIExhdGlubywgVm9zZV1bQ1JdW0NSXUNhbmFsIGNvbiBlbmxhY2VzIFN0cmVhbWluZyB5IFRvcnJlbnQuIEFjY2VzbyBwb3Igc2VwYXJhZG8gQ2FzdGVsbGFubyB5IExhdGluby4gUGVsw61jdWxhcyBwb3IgZ8OpbmVyb3MgeSBhw7FvLiBTZXJpZXMgcG9yIEfDqW5lcm9zLiIsIAogICAgInNlYXJjaF90eXBlIjogIm1vdmllIiwgCiAgICAidGh1bWJuYWlsIjogIi9ob21lL2Rhcmtvem1hLy5rb2RpL2FkZG9ucy9wbHVnaW4udmlkZW8uYmFsYW5kcm8vcmVzb3VyY2VzL21lZGlhL2NoYW5uZWxzL3RodW1iL2NpbmVjYWxpZGFkbG9sLmpwZyIsIAogICAgInRpdGxlIjogIkNhdMOhbG9nbyIsIAogICAgInVybCI6ICJodHRwczovL2NpbmVjYWxpZGFkLnJ1bi9lc3BhbmEvP3JlZj1lcyIKfQ%3d%3d",return)</onclick>
 							<property name="menu_id">$NUMBER[45030]</property>
 							<thumb>icons/sidemenu/movies.png</thumb>
 							<property name="id">mov</property>
